fixed too small text

--- a/style.css
+++ b/style.css
@@ -27,6 +27,11 @@ button {
     align-self: center;
 }
 
+.title {
+    font-size: 32px;
+    margin: 2px;
+}
+
 .section {
     background-color: rgba(0, 0, 0, 0.5);
     padding: 5px;
